# python-ripper

./: Pipfile  README.md  badOut  cli.py  hold  requirements.txt  setup.cfg  working.py
manga_ripper/: __init__.py  base.py  cli.py  magnadog.py  mangakakalot.py  mangaraw.py  mangareader.py  pyproject.toml  readcomiconline.py  viewcomics.py
manga_ripper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
